[gd_scene load_steps=14 format=3 uid="uid://btuy12cb36xdv"]

[ext_resource type="Script" path="res://battle.gd" id="1_kaojf"]
[ext_resource type="PackedScene" uid="uid://bcba5shbahyv8" path="res://unit.tscn" id="2_1sxf7"]
[ext_resource type="PackedScene" uid="uid://oatm1y0uhyp1" path="res://tile_map.tscn" id="3_gqevq"]
[ext_resource type="AudioStream" uid="uid://cv581jp26xouc" path="res://Sound/battle.mp3" id="4_34nla"]
[ext_resource type="Script" path="res://background_music.gd" id="5_horny"]
[ext_resource type="FontFile" uid="uid://djfqhgg6rc7os" path="res://Assets/Assets/Fonts/fantaisieartistique/FantaisieArtistique.ttf" id="5_lb5do"]
[ext_resource type="Texture2D" uid="uid://d1f1spvuuqr6" path="res://Assets/Assets/Background/map.png" id="6_w2als"]
[ext_resource type="Texture2D" uid="uid://kee7h2m3l77d" path="res://Assets/Assets/Buttons/Next.png" id="8_wuk15"]
[ext_resource type="Texture2D" uid="uid://v3t20pbm37xs" path="res://Assets/Assets/Buttons/Confirm.png" id="9_jufws"]
[ext_resource type="Texture2D" uid="uid://fid8djbves7d" path="res://Assets/Assets/Buttons/Adrenalin.png" id="10_mcspp"]
[ext_resource type="Texture2D" uid="uid://dop11l6eg5xl7" path="res://Assets/Assets/Buttons/Wait.png" id="11_odxh2"]
[ext_resource type="Texture2D" uid="uid://bu57oqryqmt3j" path="res://Assets/Assets/Buttons/Defend.png" id="12_qsjvo"]
[ext_resource type="Texture2D" uid="uid://bjb0smec6jsr2" path="res://Assets/Assets/Background/BackgroundColor.png" id="13_4h55d"]

[node name="Battle" type="Node2D" node_paths=PackedStringArray("tile_map", "game_over_label", "turn_label", "player1_stats", "player2_stats", "defend_button", "wait_button", "adrenalin_button", "confirm_button", "next_button")]
script = ExtResource("1_kaojf")
unit_scene = ExtResource("2_1sxf7")
tile_map = NodePath("TileMap")
game_over_label = NodePath("Game Over")
turn_label = NodePath("Turn")
player1_stats = NodePath("Player1 Unit Stats")
player2_stats = NodePath("Player2 Unit Stats")
defend_button = NodePath("Button Container/Defend")
wait_button = NodePath("Button Container/Wait")
adrenalin_button = NodePath("Adrenalin")
confirm_button = NodePath("Button Container/Confirm")
next_button = NodePath("Button Container/Next")

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(768.25, 514)
scale = Vector2(1.47284, 1.56901)
texture = ExtResource("6_w2als")

[node name="TileMap" parent="." instance=ExtResource("3_gqevq")]
z_index = 1

[node name="Game Over" type="Label" parent="."]
z_index = 2
offset_left = 200.0
offset_top = 50.0
offset_right = 1350.0
offset_bottom = 850.0
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player 1" type="Label" parent="."]
z_index = 1
offset_top = -42.0
offset_right = 115.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 30
text = "Gracz 1"

[node name="Player 2" type="Label" parent="."]
z_index = 1
offset_left = 1389.0
offset_top = -42.0
offset_right = 1504.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 30
text = "Gracz 2"

[node name="Turn" type="Label" parent="."]
visible = false
z_index = 2
offset_left = 637.0
offset_top = 33.0
offset_right = 923.0
offset_bottom = 85.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 50
text = "NOWA TURA"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_34nla")
script = ExtResource("5_horny")

[node name="Player1 Unit Stats" type="Panel" parent="."]
visible = false
offset_left = -185.0
offset_top = 390.0
offset_right = -23.0
offset_bottom = 562.0

[node name="Name" type="Label" parent="Player1 Unit Stats"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 46.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Label" parent="Player1 Unit Stats"]
layout_mode = 0
offset_top = 46.0
offset_right = 162.0
offset_bottom = 172.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="Player2 Unit Stats" type="Panel" parent="."]
visible = false
offset_left = 1522.0
offset_top = 390.0
offset_right = 1684.0
offset_bottom = 562.0

[node name="Name" type="Label" parent="Player2 Unit Stats"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 46.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="Label" parent="Player2 Unit Stats"]
layout_mode = 0
offset_top = 46.0
offset_right = 162.0
offset_bottom = 172.0
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_lb5do")
theme_override_font_sizes/font_size = 20
vertical_alignment = 1

[node name="Button Container" type="HBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1191.0
offset_top = 945.0
offset_right = 1857.0
offset_bottom = 1083.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.38, 0.38)

[node name="Next" type="Button" parent="Button Container"]
z_index = 1
layout_mode = 2
icon = ExtResource("8_wuk15")
flat = true

[node name="Confirm" type="Button" parent="Button Container"]
z_index = 1
layout_mode = 2
icon = ExtResource("9_jufws")
flat = true

[node name="Wait" type="Button" parent="Button Container"]
visible = false
z_index = 1
layout_mode = 2
icon = ExtResource("11_odxh2")
flat = true

[node name="Defend" type="Button" parent="Button Container"]
visible = false
z_index = 1
layout_mode = 2
icon = ExtResource("12_qsjvo")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.901961)
position = Vector2(766.912, 939)
scale = Vector2(0.52415, 0.0818055)
texture = ExtResource("13_4h55d")

[node name="Adrenalin" type="Button" parent="."]
visible = false
z_index = 1
offset_left = 1060.0
offset_top = 945.0
offset_right = 1391.0
offset_bottom = 1083.0
scale = Vector2(0.38, 0.38)
icon = ExtResource("10_mcspp")
flat = true

[connection signal="pressed" from="Button Container/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Button Container/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Button Container/Wait" to="." method="_on_wait_pressed"]
[connection signal="pressed" from="Button Container/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="Adrenalin" to="." method="_on_adrenalin_pressed"]
